# suisave

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  install.py  main.cpp  mkdocs.yml  plan.md  pyproject.toml  suisave
.github/workflows/: docs.yml
docs/: index.md  local.md  remote.md
docs/guide/: concepts.md  installation.md  tutorial.md
docs/local/: commands.md  config.md  overview.md
docs/reference/: templates.md  troubleshooting.md
docs/remote/: commands.md  config.md  modes.md  overview.md
docs/stylesheets/: extra.css
include/: ansicolors.h  backup_utils.h  string_utils.h
src/: a.out  main.cpp
src/suisave/: cli.py  core.py
src/suisave/cmds/: __init__.py  config.py  remote.py  run.py
src/suisave/struct/: comet.py  context.py  local_config.py  logger.py  remote.py  stats.py
src/suisave/ui/: events.py  rich_run.py  state.py  textual_config.py  textual_run.py
templates/: comet.toml  suisave.remote.toml
tests/: test_comet.py  test_config_cmds.py  test_core.py  test_core_lock.py  test_core_rsync.py  test_local_config_env.py  test_remote_cmds.py  test_remote_config.py  test_run_cmds.py
